Fix visual bug with house-display on large devices
On devices with widths larger than 1200px there was too much margin, which caused the marbles to break prematurely and be displayed outside the houses.

--- a/frontend/src/components/House.css
+++ b/frontend/src/components/House.css
@@ -19,9 +19,9 @@
 }
 
 .house__marble-container {
-    height: 56px;
-    width: 56px;
-    margin: 12px;
+    height: 58px;
+    width: 58px;
+    margin: 11px;
 }
 
 @media (min-width: 800px) and (min-height: 800px) {
@@ -36,9 +36,9 @@
     }
 
     .house__marble-container {
-        height: 76px;
-        width: 76px;
-        margin: 12px;
+        height: 79px;
+        width: 79px;
+        margin: 11px;
     }
 }
 
@@ -54,9 +54,9 @@
     }
 
     .house__marble-container {
-        height: 94px;
-        width: 94px;
-        margin: 15px;
+        height: 96px;
+        width: 96px;
+        margin: 12px;
     }
 }
 
@@ -72,9 +72,9 @@
     }
 
     .house__marble-container {
-        height: 112px;
-        width: 112px;
-        margin: 14px;
+        height: 114px;
+        width: 114px;
+        margin: 13px;
     }
 }
 
